[#349][WIP] add keyword count to view project

--- a/arability/app/views/admin/list_developer_projects.html.erb
+++ b/arability/app/views/admin/list_developer_projects.html.erb
@@ -16,12 +16,14 @@
             <thead>
               <tr>
                 <td>اسم المشروع</td>
+                <td>عدد الكلمات</td>
               </tr>
             </thead>
             <tbody>
               <% for item in @list %>
                 <tr>
                   <td><%= item.name %></td>
+                  <td><%= item.keywords.count %></td>
                 </tr>
               <% end %>
             </tbody>
