[issue #350] fixed dropdown buttons

--- a/arability/app/views/shared/_navbar.html.erb
+++ b/arability/app/views/shared/_navbar.html.erb
@@ -42,7 +42,7 @@
                     <img src="/assets/twitter-lgn.png" width="50px" style="padding-top:4px; padding-bottom:4px; padding-right:2px; padding-left:2px; display: inline-block">
                   </a>
                   <a href="#" style="width:50px; padding:0px;margin:0px; display:inline-block;">
-                    <img src="/assets/google_64.png" width="50px" style="padding-top:4px; padding-bottom:4px; padding-right:2px; padding-left:2px; display: inline-block">
+                    <img src="/assets/google-lgn.png" width="50px" style="padding-top:4px; padding-bottom:4px; padding-right:2px; padding-left:2px; display: inline-block">
                   </a>
                 </div>
 
@@ -62,7 +62,7 @@
         <% if current_gamer.try(:admin?) %>
           <li><a href="/admin">Arability Control Panel</a></li>
         <% end %>
-        <% else I18n.locale==:ar %>
+        <% else I18n.locale==:ar %> 
         <% if current_gamer.try(:admin?) %>
           <li><a href="/admin">لوحة تحكم Arability</a></li>
         <% end %>
