--- a/arability/app/views/shared/_navbar.html.erb
+++ b/arability/app/views/shared/_navbar.html.erb
@@ -19,7 +19,7 @@
           <li><a href="<%= new_gamer_registration_path %>"><%= t :sign_up %></a></li>
           <li class="dropdown">
           <a class="dropdown-toggle" href="#" data-toggle="dropdown"><%= t :sign_in %> <strong class="caret"></strong></a>
-            <div class="dropdown-menu" style="padding: 15px; padding-bottom: 0px;">
+            <div class="dropdown-menu" id="black" style="padding: 15px; padding-bottom: 0px;">
                <%= form_for("gamer", url: gamer_session_path) do |f| %>
                 <%= f.text_field :login, style: "margin-bottom: 15px;", placeholder: t(:username_or_email), size: "30" %>
                 <%= f.password_field :password, style: "margin-bottom: 15px;", placeholder: t(:password), size: "30" %>
@@ -58,7 +58,7 @@
           <li><%= link_to t(:backend), backend_home_path %></li>
         <% end %>
         <% if I18n.locale==:en %>
-          <li><a href="/gamers/edit"><i class="icon-wrench"></i>Edit Account Settings</a></li>
+          <li><a href="/gamers/edit">Settings</a></li>
         <% if current_gamer.try(:admin?) %>
           <li><a href="/admin">Arability Control Panel</a></li>
         <% end %>
