fixed code conventions

--- a/arability/app/views/admin/list_developer_projects.html.erb
+++ b/arability/app/views/admin/list_developer_projects.html.erb
@@ -6,7 +6,7 @@
         <div class="tab-pane well span7 active">
           <legend>
             <div class="pull-left pagination">
-              <%= paginate @list, :remote => true %>
+              <%= paginate @list, remote: true %>
             </div>
             <a>
               عرض المشارييع الخاصة ب <%= @developer.gamer.username %>
