fixed hover title

--- a/arability/app/views/admin/add_category.html.erb
+++ b/arability/app/views/admin/add_category.html.erb
@@ -7,7 +7,7 @@
           <form method='post' class="form-horizontal">
             <fieldset>
               <legend>
-                <a>إضافة فئة جديدة</a>
+                إضافة فئة جديدة
               </legend>
               <input type="hidden" value="<%= form_authenticity_token %>" name="authenticity_token">
               <div class="control-group<%= flash[:error] && flash[:error][:arabic_name]? ' error' : ''%>">
